--- a/login.css
+++ b/login.css
@@ -146,7 +146,7 @@ hr{
 .header-banner {
     height: 150px;
     width: 100%;
-    background-color: rgba(29, 29, 27, 0.76);
+    background-color: rgba(0, 0, 0, 0.712);
     border: 2px solid violet;
 }
 
@@ -154,7 +154,6 @@ hr{
     display: flex;
     justify-content: space-between;
     border: 2px solid purple;
-    margin-bottom: 60px;
     padding: 25px;
 }
 
@@ -189,4 +188,19 @@ hr{
 .banner-bottom{
     border: 2px solid white;
     height:10px;
+}
+
+.banner-option {
+    display: flex;
+    justify-content: flex-end;
+    
+}
+
+.fas {
+    color: rgb(199, 199, 199);
+    margin: 8px;
+}
+
+ul{
+    list-style: none;
 }
