--- a/login.css
+++ b/login.css
@@ -23,11 +23,13 @@ body {
     width: 500px;
     height: 500px;
     margin-left: 500px;
-    margin-top: 200px;
+
 
     border-radius: 5px;
     box-shadow: 0 3px 0 0 rgba(0, 0, 0, 0.3);
     background-color: #fff;
+    position : relative;
+    top: 30%;
 }
 
 .form-row{
