--- a/login.css
+++ b/login.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Helvetica" , sans-serif;
-
+    
 }
 
 
@@ -13,9 +13,11 @@
 }
 
 body {
-    background-image: url("images/back.jpg");
+    /* background-image: url("images/back.jpg");
     background-repeat: none;
-    background-size: cover;
+    background-size: cover; */
+    background-color: rgb(36, 36, 36);
+
 }
 
 .box {
@@ -184,14 +186,16 @@ hr{
 .page{
     width: 960px;
     margin: auto;
-    border: 2px solid rgb(58, 216, 18);
+    box-shadow: 0 3px 0 0 rgba(0, 0, 0, 0.3);
     height: 350px;
+    background-color: rgb(70, 66, 66);
 }
 
 .sidebar{
     width: 300px;
     border: 2px solid red;
     height: 350px;
+    background-color: rgb(70, 66, 66);
 }
 
 .flex-box{
@@ -199,7 +203,7 @@ hr{
     border: 2px solid white;
     position: relative;
     top: 200px;
-
+    background-color: rgb(36, 36, 36);
 }
 
 .banner-bottom{
@@ -253,6 +257,12 @@ ul{
 .fa-search{
     position: absolute;
     padding-top: 8px;
+    cursor:text;
+}
+
+.fa-search:hover {
+    
+    background-color: rgba(8, 8, 8, 0.192)
 }
 
 .search input:hover{
@@ -272,3 +282,23 @@ ul{
 .logo:hover {
     border: 2px solid #1DA1F2;
 }
+
+h2 {
+    color: #fff;
+}
+
+.grid-container{
+    display: flex;
+    justify-content: space-between;
+}
+
+.thumbnail >li > img{
+    width: 200px;
+    height: 250px;
+    padding: 10px;
+    border: 2px solid black;
+    border-radius: 5px;
+    background-color: rgb(51, 51, 51);
+    margin: 8px;
+
+} 
